Closed Bug 817267 Opened 12 years ago Closed 12 years ago

OSFileConstants.cpp:389:47: error: 'DIR' has no member named '__dd_fd' (on BSDs)

Categories

(Core :: Networking: File, defect)

x86_64
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla20
Tracking Status
firefox19 --- affected

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

Attachments

(1 file)

dirfd() is a function only on OpenBSD 5.2 and on FreeBSD 10.0 (in devel). DragonFly and NetBSD as well as earlier releases of OpenBSD and FreeBSD still have the macro version. http://gitweb.dragonflybsd.org/dragonfly.git/history/HEAD:/include/dirent.h http://svnweb.freebsd.org/base/head/include/dirent.h http://cvsweb.netbsd.org/bsdweb.cgi/src/include/dirent.h http://www.openbsd.org/cgi-bin/cvsweb/src/include/dirent.h
Attached patch build fixSplinter Review
Attachment #687375 - Flags: review?(dteller)
Comment on attachment 687375 [details] [diff] [review] build fix Review of attachment 687375 [details] [diff] [review]: ----------------------------------------------------------------- Looks good, thank you very much.
Attachment #687375 - Flags: review?(dteller) → review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Comment on attachment 687375 [details] [diff] [review] build fix [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 770538 attachment 676264 [details] [diff] [review] User impact if declined: broken build on DragonFly, NetBSD, FreeBSD <= 9.1 Testing completed (on m-c, etc.): landed on m-c Risk to taking this patch (and alternatives if risky): break build on BSDs where __dd_fd actually exists (are there any?) String or UUID changes made by this patch:
Attachment #687375 - Flags: approval-mozilla-aurora?
Comment on attachment 687375 [details] [diff] [review] build fix not seeing how this needs to be rushed into branches and can't just ride the trains. please re-nom if there's a solid case for user impact here.
Attachment #687375 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora-
also - is this something new in 19? if it's a regression or new in 19 I'd be more convinced that a low risk uplift would be OK, but if this has been present all along (or for many previous releases) there's less reason to push it into Aurora and not just wait until 20 is released.
(In reply to Lukas Blakk [:lsblakk] from comment #7) > please re-nom if there's a solid case for user impact here. The breakage affects only some tier3 platforms, listed in the request. (In reply to Lukas Blakk [:lsblakk] from comment #8) > if it's a regression or new in 19... A regression from bug 770538... As the error doesn't happen on recent OpenBSD 5.2 release :gaston won't notice it with his buildbot. I didn't either because I'm running FreeBSD 10.0-CURRENT locally
And so, FreeBSD ports and PkgSrc folks would have to add one more patch to their tree just for 19.0...
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: