Bug 817267 - dirfd() is a macro on some BSDs, fix build there. r=yoric